Fix for metric count bug not showing correct number of samples * Improved performance by submitting all cids in a single request to KairosdB * Updated to java 11 and gradle 6
Signed-off-by: Marcel Wagner <wagmarcel@web.de>